fix: min height adds extra scrollbar to the page

--- a/frontend/src/pages/PublicDashboard/PublicDashboard.styles.scss
+++ b/frontend/src/pages/PublicDashboard/PublicDashboard.styles.scss
@@ -1,6 +1,4 @@
 .public-dashboard-page {
-	min-height: 100vh;
-
 	.public-dashboard-error-container {
 		display: flex;
 		flex-direction: column;
